<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add_contact"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_create_group"
        android:title="@string/menu_create_group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_my_qr"
        android:title="@string/menu_my_qr"
        app:showAsAction="never" />
    <item android:id="@+id/menu_folders" android:title="@string/folders_manage" app:showAsAction="never" />
    <item android:id="@+id/menu_pins" android:title="@string/pins_manage" app:showAsAction="never" />
    <item
        android:id="@+id/menu_labels"
        android:title="@string/labels_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_backup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_lock"
        android:title="@string/menu_lock"
        app:showAsAction="never" />
</menu>
