<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <komms.android.IncognitoEditText
                android:id="@+id/add_name"
                android:hint="@string/add_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <komms.android.IncognitoEditText
                android:id="@+id/add_bundle"
                android:hint="@string/add_bundle"
                android:inputType="textMultiLine|textNoSuggestions"
                android:fontFamily="monospace"
                android:minLines="3"
                android:maxLines="6"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_scan"
                android:text="@string/add_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_from_bundle"
                android:text="@string/add_from_bundle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <komms.android.IncognitoEditText
                android:id="@+id/add_address"
                android:hint="@string/add_address"
                android:inputType="text|textNoSuggestions"
                android:fontFamily="monospace"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_from_address"
                android:text="@string/add_from_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/add_hints_label"
                android:textSize="12sp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <komms.android.IncognitoEditText
                android:id="@+id/add_hints"
                android:inputType="textMultiLine|textNoSuggestions"
                android:fontFamily="monospace"
                android:minLines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
